--- a/assets/config/errbit/errbit.yml
+++ b/assets/config/errbit/errbit.yml
@@ -2,63 +2,63 @@
 # =============
 #
 # The host of your errbit server
-host: errbit.example.com
+host: {{ERRBIT_HOST}}
 
 # The port for your errbit server.
 # Only set this if it isn't the default for the protocol (i.e.. 80 for HTTP, 443 for HTTPS)
-# port: 8080
+port: {{ERRBIT_PORT}}
 
 # The protocol for your errbit server.
 # Only set if not running default HTTP
-# protocol: https
+protocol: http
 
 # Enforce SSL connections
 enforce_ssl: false
 
 # The email address which email notifications
 # will be sent from.
-email_from: errbit@example.com
+email_from: {{ERRBIT_EMAIL}}
 
 # If you turn on this option, email_at_notices can be
 # configured on a per app basis, at the App edit page
-per_app_email_at_notices: false
+per_app_email_at_notices: {{ERRBIT_PER_APP_EMAIL}}
 
 # Configure when emails are sent for an error.
 # [1,3,7] = 1st, 3rd, and 7th occurence triggers
 # an email notification.
-email_at_notices: [1, 10, 100]
+email_at_notices: {{ERRBIT_EMAIL_AT_NOTICES}}
 
 # If you turn on this option, notify_at_notices can be
 # configured on a per app basis, at the App edit page
-per_app_notify_at_notices: false
+per_app_notify_at_notices: {{ERRBIT_PER_APP_NOTICES}}
 
 # Configure when emails are sent for an error.
 # [1,3,7] = 1st, 3rd, and 7th occurence triggers
 # [0] for all notices, provided notification service is configured
-notify_at_notices: [0]
+notify_at_notices: {{ERRBIT_NOTIFY_AT_NOTICE}}
 
 # Configure whether or not the user should be prompted before resolving/deleting/merging/etc an error.
-confirm_err_actions: true
+confirm_err_actions: {{ERRBIT_CONFIRM_ERR_ACTIONS}}
 
 # Add an optional 'username' field to Users.
 # Helpful when you need to plug in a custom authentication strategy, such as LDAP.
-user_has_username: false
+user_has_username: {{ERRBIT_USER_HAS_USERNAME}}
 
 # Allow comments while an issue tracker is configured.
 # This is useful if the err is not critical enough to create a ticket,
 # but you want to leave a short comment.
-allow_comments_with_issue_tracker: true
+allow_comments_with_issue_tracker: {{ERRBIT_COMMENTS_WITH_ISSUE_TRACKER}}
 
 # Display internal errors in production
 # Since this is an internal application, you might like to see what caused Errbit to crash.
 # Pull requests are always welcome!
 # However, you might be more comfortable setting this to false if your server can be accessed by anyone.
-display_internal_errors: true
+display_internal_errors: {{ERRBIT_DISPLAY_INTERNAL_ERRORS}}
 
 # Enable Gravatar.
-use_gravatar: true
+use_gravatar: {{ERRBIT_USE_GRAVATAR}}
 # Default Gravatar image, can be: mm, identicon, monsterid, wavatar, retro.
-gravatar_default: identicon
+gravatar_default: {{ERRBIT_GRAVATAR_DEFAULT}}
 
 # GitHub OAuth configuration
 # If you want to allow authentication via GitHub, you will need to register
@@ -69,18 +69,18 @@ gravatar_default: identicon
 # Callback URL: http://errbit.example.com/users/auth/github
 #
 # After you have registered your app, copy your Client ID and Secret key below.
-github_authentication: false
-github_client_id: 'GITHUB_CLIENT_ID'
-github_secret: 'GITHUB_SECRET'
+# github_authentication: false
+# github_client_id: 'GITHUB_CLIENT_ID'
+# github_secret: 'GITHUB_SECRET'
 # GitHub Permissions to request from user
 #   ['repo']        - Allow creating issues for public and private repos.
 #   ['public_repo'] - Only allow creating issues for public repos.
 #   []              - No permission to create issues on any repos.
-github_access_scope: ['repo']
+# github_access_scope: ['repo']
 
 # Change this to point to the URL of your GitHub Enterprise installation, if
 # you want to link local repositories.
-github_url: https://github.com
+# github_url: https://github.com
 
 # Configure SMTP settings. If you are running Errbit on Heroku,
 # sendgrid will be configured by default.
@@ -93,8 +93,3 @@ github_url: https://github.com
 #  :enable_starttls_auto: true
 #  :user_name:            USERNAME
 #  :password:             PASSWORD
-
-# If you want send your email by your sendmail
-# sendmail_settings:
-#  :location: '/usr/sbin/sendmail'
-#  :arguments: '-i -t'
